@@ -78,7 +78,47 @@
 
 
     </dependencies>
+   <build>
+
+    <plugins>
+        <!-- Failsafe plugin to help test failures to be ignored -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>3.0.0-M1</version>
+            <configuration>
+                <testFailureIgnore>true</testFailureIgnore>
+                <skipTests>false</skipTests>
+                <includes>
+                    <include>runners/pages.java</include>
+                </includes>
+            </configuration>
+        </plugin>
 
 
+        <!-- Surefire plugin used to run tests in parallel, parallel execution settings are configured. -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M1</version>
+            <configuration>
+                <parallel>methods</parallel>
+                <forkMode>perthread</forkMode>
+                <threadCount>3</threadCount>
+                <reuseForks>false</reuseForks>
+                <argLine>-Duser.language=en</argLine>
+                <argLine>-Xmx1024m</argLine>
+                <argLine>-XX:MaxPermSize=256m</argLine>
+                <argLine>-Dfile.encoding=UTF-8</argLine>
+                <useFile>false</useFile>
+                <includes>
+                    <include>tests/companyProcess/US0006.java</include> <!-- Specify the pages class to run here -->
+                </includes>
+                <testFailureIgnore>true</testFailureIgnore>
+                <suiteXmlFiles>testng.xml</suiteXmlFiles>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 
 </project>
